--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: palevioletred; 
+    background-color: rgb(229, 185, 200); 
     color:rgb(238, 181, 108);
     font-family: "Playwrite CU", cursive;
     display: flex;
